Some QoL/Sonar changes